--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </style>
 <div class="headline-1658581343654lMpslJ-element headline">
 <h1>
-REVELADO&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000">ÓLEO CASEIRO CHINÊS</span></span>&nbsp;CAPAZ DE&nbsp;<span style="color:#ff0000">REVERTER A CALVÍCIE</span>&nbsp;<br>EM APENAS&nbsp;<span style="background-color:#ffff00">4 semanas.</span>
+REVELADO COMO&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000">REVERTER A CALVÍCIE</span></span>&nbsp;COM&nbsp;<span style="color:#ff0000">ÓLEO CASEIRO CHINÊS</span>&nbsp;<br>EM APENAS&nbsp;<span style="background-color:#ffff00">4 semanas.</span>
 </h1>
 </div>
 
