--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </style>
 <div class="headline-1658581343654lMpslJ-element headline">
 <h1>
-APRENDA&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000">REVERTER A CALVÍCIE</span></span>&nbsp;COM&nbsp;<span style="color:#ff0000">ÓLEO CASEIRO</span>&nbsp;<br>EM&nbsp;<span style="background-color:#ffff00">4 SEMANAS.</span>
+VEJA COMO&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000">CURAR A CALVÍCIE</span></span>&nbsp;COM&nbsp;<span style="color:#ff0000">ÓLEO CASEIRO</span>&nbsp;<br>EM&nbsp;<span style="background-color:#ffff00">4 SEMANAS.</span>
 </h1>
 </div>
 
