--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ VEJA COMO&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/dj2J7Si" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/EauPdq8" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO ELIMINAR A CALVÍCIE</span>
                 <span class="span-btn2">(Adicionar ao Carrinho)</span>
               </a>
@@ -465,7 +465,7 @@ VEJA COMO&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/dj2J7Si" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/EauPdq8" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO ELIMINAR A CALVÍCIE</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
