--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </script><script>
       ttq.track('ViewContent');
     </script>
-    <link rel="preload" href="https://scripts.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/players/6410eafd94170900090b6d4a/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/ab-test/640cabcd25bb810009cab8cd/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-<link rel="preload" href="https://images.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/players/6410eafd94170900090b6d4a/thumbnail.jpg" as="image">
-<link rel="preload" href="https://cdn.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/6410eaef94170900090b6d45/playlist.m3u8" as="fetch">
+<link rel="preload" href="https://images.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/players/640cabcd25bb810009cab8cd/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/63f9222c8f7f51000bab33e9/playlist.m3u8" as="fetch"><link rel="preload" href="https://cdn.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/63f6a486ca8f21000900a263/playlist.m3u8" as="fetch">
 <link rel="dns-prefetch" href="https://cdn.converteai.net">
 <link rel="dns-prefetch" href="https://scripts.converteai.net">
 <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>A Grande Verdade</title>
+    <title>O Fim da Calvície</title>
     
   <style type="text/css">
       header {
@@ -61,7 +61,7 @@ VEJA COMO&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000
 </div>
 
             <!-- VSL -->
-            <div id="vid_6410eafd94170900090b6d4a" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6410eafd94170900090b6d4a" src="https://images.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/players/6410eafd94170900090b6d4a/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6410eafd94170900090b6d4a" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6410eafd94170900090b6d4a">var s=document.createElement("script");s.src="https://scripts.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/players/6410eafd94170900090b6d4a/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_640cabcd25bb810009cab8cd">var s=document.createElement("script");s.src="https://scripts.converteai.net/d0dea0fe-8b37-41fb-afa9-0a2bdfb972d8/ab-test/640cabcd25bb810009cab8cd/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
