--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            </style>
 <div class="headline-1658581343654lMpslJ-element headline">
 <h1>
-VEJA COMO&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000">SEU FILHO</span></span>&nbsp;PODE ESQUECER&nbsp;<span style="color:#ff0000">AS DIFICULDADES</span>&nbsp;<br>E APRENDER A LER&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000">EM 4 SEMANAS</span>
+Mistura&nbsp;<span style="background-color:#ffff00"><span style="color:#ff0000">SIMPLES E NATURAL</span></span>&nbsp;cura a&nbsp;<span style="color:#ff0000">CALVÍCIE.</span>&nbsp;<br>Resultados visíveis em&nbsp;<span style="background-color:#ffff00">4 semanas.</span>
 </h1>
 </div>
 
