--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     <style type="text/css">
       body {
         color: white;
-        background-image: url("assets/img/bg.jpeg");
         background-color: rgba(0, 0, 0, 0.6);
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
-        background-blend-mode: white;
+        background-blend-mode: darken;
       }
     </style>
 
