--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3 class="my-4"><b>Verifique se o aúdio está ligado e aperte o PLAY</b></h3>
 
             <!-- VSL -->
-           </div><script type="text/javascript" id="scr_645e5f37ad718e000969ee4b">var s=document.createElement("script");s.src="https://scripts.converteai.net/ad0163ac-3b2d-4c79-8736-f38680a71bb6/players/645e5f37ad718e000969ee4b/player.js",s.async=!0,document.head.appendChild(s);</script>
+           <div id="vid_64665dce47265d0009b18b49" style="position:relative;width:100%;padding: 56.25% 0 0;"><img decoding="async" id="thumb_64665dce47265d0009b18b49" src="https://images.converteai.net/980daf7d-c340-4820-abff-80a8a7c25d7a/players/64665dce47265d0009b18b49/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64665dce47265d0009b18b49" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64665dce47265d0009b18b49">var s=document.createElement("script");s.src="https://scripts.converteai.net/980daf7d-c340-4820-abff-80a8a7c25d7a/players/64665dce47265d0009b18b49/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
