--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preload" href="https://scripts.converteai.net/1f058603-79bf-4200-be7f-825396e9a9bb/players/647a2f211613250009371a1f/player.js" as="script">
+<link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
+<link rel="preload" href="https://images.converteai.net/1f058603-79bf-4200-be7f-825396e9a9bb/players/647a2f211613250009371a1f/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/1f058603-79bf-4200-be7f-825396e9a9bb/647a2f14f218ab00097d3d98/main.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://cdn.converteai.net">
+<link rel="dns-prefetch" href="https://scripts.converteai.net">
+<link rel="dns-prefetch" href="https://images.converteai.net">
+<link rel="dns-prefetch" href="https://api.vturb.com.br">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
