--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <title>Novidades</title>
     
     <style type="text/css">
-      body {
-        color: white;
-        background-color: rgba(0, 0, 0, 0.6);
-        background-position: center;
-        background-size: cover;
-        background-attachment: fixed;
-        background-blend-mode: darken;
-      }
+      header {
+  color: black;
+  background-image: url("assets/img/bg.jpeg");
+  background-color: white;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
     </style>
 
   </head>
