--- a/index.html
+++ b/index.html
@@ -34,5 +34,26 @@
     <p style="text-align: center; font-weight: bold;">© 2023 – Todos os direitos reservados.</p>
   </div>
   <script type="text/javascript" src="script.js"></script>
+  </div>
+        </div>
+      </div>
+    </header>
+
+   
+    <p style="text-align: center; font-weight:">By WMV Digital CNPJ: 35.863.373/0001-70 - Rua Paço do Lumiar, 26 - Pechincha - Rio de Janeiro/RJ - CEP: 22770-080</p>
+  </div>
+  <script type="text/javascript" src="script.js"></script>
+  <!-- Termos de Uso e Política de Privacidade -->
+            <div class="text-black mt-4"><a href="termos.html" class="text-black">Sobre Nós</a> | <a href="privacidade.html" class="text-black">Política de Reembolso</a></div>
+          </div>
+        </div>
+      </div>
+    </header>
+  <!-- Termos de Uso e Política de Privacidade -->
+            <div class="text-black mt-4"><a href="termos.html" class="text-black">Fale Conosco</a> | <a href="privacidade.html" class="text-black">Política de Envio</a></div>
+          </div>
+        </div>
+      </div>
+    </header>
 </body>
 </html>
