--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="style.css">
-  <title>Tudo Pronto!</title>
+  <title>¡Todo Preparado!</title>
 </head>
 <body> 
   <div class="container">
     <div class="black">
       <div>
         <div class="question">
-          <h1>Tudo Pronto!</h1>
-          <p>Clique no botão abaixo para continuar</p>
+          <h1>¡Todo Preparado!</h1>
+          <p>Haga clic en el botón de abajo para continuar</p>
         </div>
         <div class="answer">
           <a class="btn" href="https://lojayoucenter.com/products/gadget-de-leitura-educacional">CONTINUAR</a>
@@ -26,7 +26,7 @@
    
 
    
-    <p style="text-align: center; font-weight: bold;">© 2023 – Todos os direitos reservados.</p>
+    <p style="text-align: center; font-weight: bold;">© 2023 – Todos los derechos reservados.</p>
   </div>
   <script type="text/javascript" src="script.js"></script>
   </div>
