--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
    
-    <p style="text-align: center; font-weight:">By WMV Digital CNPJ: 35.863.373/0001-70 - Rua Paço do Lumiar, 26 - Pechincha - Rio de Janeiro/RJ - CEP: 22770-080</p>
+    <p style="text-align: center; font-color: white;">By WMV Digital CNPJ: 35.863.373/0001-70 - Rua Paço do Lumiar, 26 - Pechincha - Rio de Janeiro/RJ - CEP: 22770-080</p>
   </div>
   <script type="text/javascript" src="script.js"></script>
    <!-- Termos de Uso e Política de Privacidade -->
