--- a/v.html
+++ b/v.html
@@ -79,7 +79,7 @@ text-align: center;
 </style>
 <div class="text-16578133316969nqkcl-element text">
 <p>
-Tú y algunas personas cercanas a ti.&nbsp;<span style="color:#000000"><b><span class="md"></span></b></span>&nbsp;fueron seleccionados para participar
+Tú y algunas personas cercanas a ti.&nbsp;<span style="color:#000000"><b><span class="md"></span></b></span>&nbsp;Fueron seleccionados para participar
 </p>
 </div>
 </div>
