--- a/v.html
+++ b/v.html
@@ -173,7 +173,7 @@ text-align: center;
 </style>
 <div class="description-1657813783037JBeru3-element ">
 <h3>
-Míralo hasta el final, esta presentación se desconectará ese día.<span style="color:#ff0000"><span class="sm"></span></span>.
+Míralo hasta el final, esta presentación se desconectará hoy.<span style="color:#ff0000"><span class="sm"></span></span>.
 </h3>
 </div>
 </div>
