--- a/v.html
+++ b/v.html
@@ -482,7 +482,7 @@ Responder
 Ezequiel Nunes
 </p>
 <p class="text-sm leading-4 pt-0.5">
-Finalmente algo que realmente funciona, gracias, doctor.
+Por fin algo que realmente funciona, ¡gracias amigo!
 </p>
 </div>
 </div>
