--- a/ab.html
+++ b/ab.html
@@ -244,7 +244,7 @@ border-radius: 0px !important;
 }
 </style>
 <div class="video-YaczXI2601434">
-<script type="text/javascript" id="scr_656947cab1958b00091842e0">var s=document.createElement("script");s.src="https://scripts.converteai.net/ae6e3f6b-6ebc-48bc-8e58-2e73208b85db/ab-test/656947cab1958b00091842e0/player.js",s.async=!0,document.head.appendChild(s);</script>
+<div id="vid_656d61484fbf7e0009ea1b98" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_656d61484fbf7e0009ea1b98" src="https://images.converteai.net/80062617-72e5-47d0-9619-24a6212aff04/players/656d61484fbf7e0009ea1b98/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_656d61484fbf7e0009ea1b98" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_656d61484fbf7e0009ea1b98">var s=document.createElement("script");s.src="https://scripts.converteai.net/80062617-72e5-47d0-9619-24a6212aff04/players/656d61484fbf7e0009ea1b98/player.js",s.async=!0,document.head.appendChild(s);</script>
 </div>
 </div>
 </div>
