--- a/ab.html
+++ b/ab.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR" dir="ltr">
-<head><base href="https://appsalud.pro/mwvt1p0/">
+<head><base href="https://kapilar.shop/ab">
 <meta name="robots" content="noindex, nofollow">
 <link rel="shortcut icon" href="data:" />
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://appsalud.pro/mwvt1p0">
+<meta property="og:url" content="https://kapilar.shop/ab">
 <meta property="og:title" content="News">
 <meta property="og:description" content="Health">
 <meta property="og:image" content="https://img.imageboss.me/atm/cdn/format:auto/u/lOo3kKi1cJYhCSbYEQSIE5COCxV2/l/BcnoMQ5825597.png">
