--- a/ab.html
+++ b/ab.html
@@ -1069,7 +1069,7 @@ text-align: center;
 </style>
 <div class="headline-cvtnIB2018689-element headline">
 <h1>
-© 2023. All Rights Reserved.<br><br>Isenção de responsabilidade: quaisquer sugestões sobre nutrição ou suplementação fornecidas pelo APP não se destinam a substituir a consulta com um médico ou profissional de saúde. Os resultados sempre variam entre indivíduos, dependendo da condição física, estilo de vida e comprometimento pessoal. Sempre consulte seu médico antes de fazer qualquer mudança na dieta ou iniciar qualquer nutrição.
+© 2023. All Rights Reserved.<br><br>
 </h1>
 </div>
 </div>
