--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
 	prefix="og: https://ogp.me/ns#" >
 <head>
 	<meta charset="UTF-8">
-		<title>hlp esp - Método PRC</title>
+		<title>Noticias</title>
 
 		<!-- All in One SEO 4.1.6.2 -->
 		<meta name="description" content="Por favor, verifica si el sonido está encendido. hoy de $57 por solo $27 Quiero adquirir el protocolo GARANTÍA DE SATISFACCIÓN DEL 100% Si por alguna razón, dentro de este plazo de 60 días, no quedas satisfecho con el Protocolo Anti DHT, simplemente envía un correo electrónico a prc@gmail.com y de inmediato te devolveremos el… Continuar lendo hlp esp" />
