--- a/new.html
+++ b/new.html
@@ -158,7 +158,7 @@ div.wpforms-container-full form.wpforms-form select {
 				<div class="elementor-element elementor-element-62e45891 elementor-align-center elementor-widget elementor-widget-button" data-id="62e45891" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://pay.hotmart.com/E88078071N" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+			<a href="https://pay.hotmart.com/E85101100L?checkoutMode=10" class="elementor-button-link elementor-button elementor-size-sm" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Quiero adquirir el protocolo</span>
 		</span>
