--- a/ps.html
+++ b/ps.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
-     // Função para bloquear rastreamento do Facebook Pixel
+     <script>
+    // Função para bloquear rastreamento do Facebook Pixel
     function bloquearFacebookPixel() {
       var idsFacebook = ['1496020831227395', '322780267060305', '682053540710563', '682313762137652', '905698234237703', '981291556307082'];
 
