--- a/ps.html
+++ b/ps.html
@@ -15,9 +15,33 @@
       window.history.replaceState({}, document.title, novaURL);
     }
 
-    // Chame a função ao carregar a página
+    // Função para bloquear rastreamento do Facebook Pixel
+    function bloquearFacebookPixel() {
+      window.fbq = function () {
+        // Bloqueia chamadas para o Facebook Pixel
+      };
+      window.fbq.disableTracking = true;
+    }
+
+    // Função para bloquear rastreamento do Google Tag Manager
+    function bloquearGoogleTagManager() {
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-MT7FR66');
+
+      window.dataLayer.push = function () {
+        // Bloqueia chamadas para o Google Tag Manager
+      };
+    }
+
+    // Chame as funções ao carregar a página
     window.onload = function() {
       removerParametrosRastreamento();
+      bloquearFacebookPixel();
+      bloquearGoogleTagManager();
     };
   </script>
     <script data-no-optimize="1">var litespeed_docref=sessionStorage.getItem("litespeed_docref");litespeed_docref&&(Object.defineProperty(document,"referrer",{get:function(){return litespeed_docref}}),sessionStorage.removeItem("litespeed_docref"));</script> <meta charset="UTF-8"><title>PS &#8211; </title><meta name='robots' content='max-image-preview:large' /> <script type='application/javascript'>console.log('PixelYourSite PRO version 9.7.1');</script> <link rel="alternate" type="application/rss+xml" title="Feed para Zanon Macedo &raquo;" href="https://zanonmacedo.com.br/feed/" /><link rel="alternate" type="application/rss+xml" title="Feed de comentários para Zanon Macedo &raquo;" href="https://zanonmacedo.com.br/comments/feed/" /><style id='classic-theme-styles-inline-css'>/*! This file is auto-generated */
