--- a/pagnew.html
+++ b/pagnew.html
@@ -209,7 +209,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-168b20fe elementor-align-center elementor-widget elementor-widget-button" data-id="168b20fe" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://go.hotmart.com/N89517730Y?ap=c7bc&#038;src=9pp" target="_blank" class="elementor-button-link elementor-button elementor-size-xl" role="button">
+			<a href="https://pay.hotmart.com/E85101100L?off=wtjxsr48&checkoutMode=10" target="_blank" class="elementor-button-link elementor-button elementor-size-xl" role="button">
 						<span class="elementor-button-content-wrapper">
 							<span class="elementor-button-icon elementor-align-icon-right">
 				<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>			</span>
