--- a/pagnew.html
+++ b/pagnew.html
@@ -2,7 +2,7 @@
 <html lang="es-CO">
 <head>
 	<meta charset="UTF-8">
-		<title>Investigación alopecia 9 ene &#8211; mj vsl &#8211; My Blog</title>
+		<title>Investigación alopecia 9 ene &#8211; wmv &#8211; My Blog</title>
 <meta name='robots' content='max-image-preview:large' />
 <script type='application/javascript'>console.log('PixelYourSite Free version 9.3.7');</script>
 <link rel="alternate" type="application/rss+xml" title="My Blog &raquo; Feed" href="https://uniqueproduct.online/feed/" />
